# AtheCode

./: ARCHITECTURE.md  CONTRIBUTIONS.md  Cargo.toml  EVALUATION.md  README.md
crates/codegen/xai-grok-agent/src/prompt/: context.rs
crates/codegen/xai-grok-agent/templates/: prompt.md
crates/codegen/xai-grok-bedrock/: Cargo.toml
crates/codegen/xai-grok-bedrock/src/: client.rs  lib.rs
crates/codegen/xai-grok-models/: default_models.json
crates/codegen/xai-grok-models/src/: lib.rs
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-minimal/src/: welcome.rs
crates/codegen/xai-grok-pager/src/: lib.rs
crates/codegen/xai-grok-pager/src/app/: app_view.rs  cli.rs
crates/codegen/xai-grok-pager/src/app/agent_view/: render.rs
crates/codegen/xai-grok-pager/src/slash/commands/: model.rs
crates/codegen/xai-grok-pager/src/views/welcome/: hero_box.rs  mod.rs
crates/codegen/xai-grok-sampler/: Cargo.toml
crates/codegen/xai-grok-sampler/src/: client.rs  events.rs  metrics.rs  types.rs
crates/codegen/xai-grok-sampling-types/: Cargo.toml
crates/codegen/xai-grok-sampling-types/src/: backend.rs  error.rs  events.rs  lib.rs  request_id.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-shell/src/agent/: auth_method.rs  config.rs  models.rs
crates/codegen/xai-grok-shell/src/remote/: client.rs
crates/codegen/xai-grok-shell/src/session/: acp_session.rs  compaction.rs
crates/codegen/xai-grok-shell/src/session/acp_session_impl/: sampler_turn.rs  spawn.rs
(+1 files in other folders)
