[package]
name = "xai-grok-bedrock"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "Amazon Bedrock backend for AtheCode (additive, alongside the xAI backend)"

[dependencies]
# Internal
xai-grok-sampling-types = { path = "../xai-grok-sampling-types" }

# AWS SDK — handles SigV4 signing and event-stream framing for us.
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }

# Async runtime + trait plumbing (all already workspace deps).
async-stream = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }

[lints]
workspace = true
